Repository fixes, categories getter
